<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- application -->
    <string name="app_name">EyeLong</string>
    <string name="app_db_name">eyelong.sqlite</string>

    <!-- api -->
    <string name="server_base_url">http://54.180.169.231:8081/</string>

    <!-- shared preferences key -->
    <string name="shared_pref_key_stage">stage</string>

    <!-- main ui -->
    <string name="main_ci">사막같은\n눈을 위해\n오아시스로 출발!</string>
    <string name="main_start_exercise">눈 운동 시작하기</string>
    <string name="main_settings_alarm">지속적인 운동을 위해 알람 맞추기</string>
    <string name="main_habit_title">오늘의 눈 습관</string>
    <string name="main_habit_description">오아시스를 향한 당신의 여정에 도움을 줄 거에요.</string>
    <string name="main_habit_cheer">습관 달성을 위해 힘내봐요!</string>
    <string name="main_habit_today">0개 달성 완료!</string>

    <!-- habit ui -->
    <string name="habit_ci">오늘의 눈 건강습관을\n체크해봐요</string>
    <string name="habit_checkout">하루 습관 체크</string>
    <string name="habit_checkout_title">눈 건강 습관 체크</string>
    <string name="habit_checkout_checked">개 습관 체크 완료</string>
    <string name="habit_checkout_description">오늘 습관 몇개를 달성하셨나요?</string>
    <string name="habit_checkout_succeed">눈 건강습관 체크가 완료 되었습니다</string>
    <string name="habit_edit_title">눈 습관 리스트 편집</string>
    <string name="habit_edit_registered">등록된 습관</string>
    <string name="habit_edit_unregistered">미등록된 습관</string>
    <string name="habit_edit_limit">눈 습관은 5개만 등록할 수 있습니다</string>
    <string name="habit_analytics">하루 습관 분석</string>
    <string name="habit_analytics_badge">달성한 습관수</string>
    <string name="habit_analytics_cheer">조금 더 힘내서\n오아시스에 가볼까요?</string>
    <string name="habit_analytics_description">일주일의 습관 분석을 확인해볼까요?</string>
    <string name="habit_analytics_suggest">내일은 달성해보면 어떨까요?</string>

    <!-- settings ui -->
    <string name="settings_reset">초기화</string>
    <string name="settings_save">완료</string>
    <string name="settings_alarm">알람 설정</string>
    <string name="settings_alarm_time">알람 시간</string>
    <string name="settings_alarm_repeat">알람 반복</string>
    <string name="settings_alarm_repeat_daily">요일 반복</string>

    <!-- day of week -->
    <string name="day_mon">월</string>
    <string name="day_tue">화</string>
    <string name="day_wed">수</string>
    <string name="day_thu">목</string>
    <string name="day_fri">금</string>
    <string name="day_sat">토</string>
    <string name="day_sun">일</string>
    <string name="day_end">도착</string>

    <!-- time -->
    <string name="clock">00 : 00</string>
    <string name="ante_meridiem">오전</string>
    <string name="post_meridiem">오후</string>

    <!--exercise-->
    <string name="exercise_for_oasis">오아시스를 향한</string>
    <string name="exercise_today">오늘의 눈 운동</string>
    <string name="exercise_list_title">눈 운동 리스트</string>
    <string name="exercise_start">운동 시작</string>
    <string name="exercise_start_message">자 그럼 시작합니다!</string>
    <string name="exercise_elapsed_time">총 소요시간</string>
    <string name="exercise_elapsed_time_default">0분 0초</string>
    <string name="exercise_minute">"분 "</string>
    <string name="exercise_second">초 </string>
    <string name="exercise_add">눈 운동 변경하기</string>
    <string name="exercise_add_limit">눈 운동은 한 세트에 3개까지만 추가할 수 있습니다</string>
    <string name="exercise_add_succeed">눈 운동이 추가되었습니다</string>
    <string name="exercise_delete">눈 운동 삭제</string>
    <string name="exercise_delete_message">이 운동을 삭제하시겠어요?</string>
    <string name="exercise_notice_title">참고해주세요!</string>
    <string name="exercise_notice_content">눈이 아프면 운동을 멈춰주세요.\n그리고 눈 운동의 효과는 사람마다 다를 수 있습니다.</string>
    <string name="exercise_guide_message">이렇게 해보세요</string>
    <string name="exercise_finish">운동 끝내기</string>
    <string name="exercise_finish_message">오늘의 눈 운동을 모두 마쳤어요!\n피로한 눈은 이제 안녕~</string>

    <!--text-->
    <string name="text_add">추가하기</string>
    <string name="text_delete">삭제</string>
    <string name="text_cancel">취소</string>
    <string name="text_count">번</string>
    <string name="text_edit">편집</string>
    <string name="text_effect">효과</string>
    <string name="text_quantity">개</string>

    <!-- blue light -->
    <string name="block_blue_light">잠깐! 블루라이트 차단 모드를 켜주세요!</string>
</resources>
