<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_main_exercise_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        app:srcCompat="@drawable/ic_main_exercise_character" />

    <LinearLayout
        android:id="@+id/progress_main_exercise"
        android:layout_width="448dp"
        android:layout_height="12dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_main_exercise_progress"
        android:orientation="horizontal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <View
            android:id="@+id/today_main_exercise"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="17dp"
            android:background="@drawable/bg_main_exercise_oval" />

        <LinearLayout
            android:id="@+id/week_main_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:fontFamily="@font/notosanskrbold"
                android:includeFontPadding="false"
                android:text="@string/day_mon"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:fontFamily="@font/notosanskrbold"
                android:includeFontPadding="false"
                android:text="@string/day_tue"
                android:textColor="@color/colorBlack"
                android:textSize="10sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:fontFamily="@font/notosanskrbold"
                android:includeFontPadding="false"
                android:text="@string/day_wed"
                android:textColor="@color/colorBlack"
                android:textSize="10sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:fontFamily="@font/notosanskrbold"
                android:includeFontPadding="false"
                android:text="@string/day_thu"
                android:textColor="@color/colorBlack"
                android:textSize="10sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:fontFamily="@font/notosanskrbold"
                android:includeFontPadding="false"
                android:text="@string/day_fri"
                android:textColor="@color/colorBlack"
                android:textSize="10sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:fontFamily="@font/notosanskrbold"
                android:includeFontPadding="false"
                android:text="@string/day_sat"
                android:textColor="@color/colorBlack"
                android:textSize="10sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:fontFamily="@font/notosanskrbold"
                android:includeFontPadding="false"
                android:text="@string/day_sun"
                android:textColor="@color/colorBlack"
                android:textSize="10sp" />

            <TextView
                android:layout_width="19dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="49dp"
                android:fontFamily="@font/notosanskrbold"
                android:includeFontPadding="false"
                android:text="@string/day_end"
                android:textColor="@color/colorBlack"
                android:textSize="10sp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
