<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.teamnexters.eyelong.ui.settings.viewmodel.AlarmSettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_settings_repeat_daily_mon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_settings_repeat_daily"
            android:button="@android:color/transparent"
            android:checked="@{viewModel.buttonCheck}"
            android:fontFamily="@font/notosanskrmedium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:onCheckedChanged="@{viewModel::onCompoundButtonCheck}"
            android:text="@string/day_mon"
            android:textColor="@color/colorGray_800"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/cb_settings_repeat_daily_sat"
            app:layout_constraintEnd_toStartOf="@+id/cb_settings_repeat_daily_tue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <CheckBox
            android:id="@+id/cb_settings_repeat_daily_tue"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_settings_repeat_daily"
            android:button="@android:color/transparent"
            android:checked="@{viewModel.buttonCheck}"
            android:fontFamily="@font/notosanskrmedium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:onCheckedChanged="@{viewModel::onCompoundButtonCheck}"
            android:text="@string/day_tue"
            android:textColor="@color/colorGray_800"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/cb_settings_repeat_daily_sun"
            app:layout_constraintEnd_toStartOf="@+id/cb_settings_repeat_daily_wed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cb_settings_repeat_daily_mon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <CheckBox
            android:id="@+id/cb_settings_repeat_daily_wed"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_settings_repeat_daily"
            android:button="@android:color/transparent"
            android:checked="@{viewModel.buttonCheck}"
            android:fontFamily="@font/notosanskrmedium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:onCheckedChanged="@{viewModel::onCompoundButtonCheck}"
            android:text="@string/day_wed"
            android:textColor="@color/colorGray_800"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/cb_settings_repeat_daily_thu"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cb_settings_repeat_daily_tue"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_settings_repeat_daily_thu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_settings_repeat_daily"
            android:button="@android:color/transparent"
            android:checked="@{viewModel.buttonCheck}"
            android:fontFamily="@font/notosanskrmedium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:onCheckedChanged="@{viewModel::onCompoundButtonCheck}"
            android:text="@string/day_thu"
            android:textColor="@color/colorGray_800"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/cb_settings_repeat_daily_fri"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cb_settings_repeat_daily_wed"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_settings_repeat_daily_fri"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_settings_repeat_daily"
            android:button="@android:color/transparent"
            android:checked="@{viewModel.buttonCheck}"
            android:fontFamily="@font/notosanskrmedium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:onCheckedChanged="@{viewModel::onCompoundButtonCheck}"
            android:text="@string/day_fri"
            android:textColor="@color/colorGray_800"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cb_settings_repeat_daily_thu"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_settings_repeat_daily_sat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_settings_repeat_daily"
            android:button="@android:color/transparent"
            android:checked="@{viewModel.buttonCheck}"
            android:fontFamily="@font/notosanskrmedium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:onCheckedChanged="@{viewModel::onCompoundButtonCheck}"
            android:text="@string/day_sat"
            android:textColor="@color/colorGray_800"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cb_settings_repeat_daily_mon"
            app:layout_constraintTop_toBottomOf="@+id/cb_settings_repeat_daily_mon" />

        <CheckBox
            android:id="@+id/cb_settings_repeat_daily_sun"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_settings_repeat_daily"
            android:button="@android:color/transparent"
            android:checked="@{viewModel.buttonCheck}"
            android:fontFamily="@font/notosanskrmedium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:onCheckedChanged="@{viewModel::onCompoundButtonCheck}"
            android:text="@string/day_sun"
            android:textColor="@color/colorGray_800"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cb_settings_repeat_daily_tue"
            app:layout_constraintTop_toBottomOf="@+id/cb_settings_repeat_daily_tue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>