<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.habit.activity.HabitEditActivity">

    <data>

        <variable
            name="viewModel"
            type="com.teamnexters.eyelong.ui.habit.viewmodel.HabitEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_habit_edit_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:background="@android:color/transparent"
            android:onClick="@{()->viewModel.onBackButtonClick()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_btn_black" />

        <TextView
            android:id="@+id/tv_habit_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/notosanskrmedium"
            android:includeFontPadding="false"
            android:text="@string/habit_edit_title"
            android:textColor="@color/colorBlack_700"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_habit_edit_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/notosanskrmedium"
            android:includeFontPadding="false"
            android:text="@string/habit_edit_registered"
            android:textColor="@color/colorBlack_200"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_habit_edit_title" />

        <TextView
            android:id="@+id/tv_habit_registered_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/notosanskrmedium"
            android:includeFontPadding="false"
            android:text="@string/text_count"
            android:textColor="@color/colorBlack_500"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_habit_edit_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_registered_habit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:divider="@{@drawable/divider_habit_recycler}"
            app:items="@{viewModel.items}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_habit_edit_registered" />

        <TextView
            android:id="@+id/tv_habit_edit_unregistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="47dp"
            android:fontFamily="@font/notosanskrmedium"
            android:includeFontPadding="false"
            android:text="@string/habit_edit_unregistered"
            android:textColor="@color/colorBlack_200"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_registered_habit" />

        <TextView
            android:id="@+id/tv_habit_unregistered_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/notosanskrmedium"
            android:includeFontPadding="false"
            android:text="@string/text_count"
            android:textColor="@color/colorBlack_500"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_registered_habit" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_unregistered_habit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:divider="@{@drawable/divider_habit_recycler}"
            app:items="@{viewModel.items}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_habit_edit_unregistered" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>